--- a/provisioning/roles/deploy/tasks/main.yml
+++ b/provisioning/roles/deploy/tasks/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: Run django migrate to create tables in DB
   command: "/home/vagrant/{{ venv_name }}/exec python {{url_django_project}}/manage.py migrate"
+- name: Run django fixture to load users initial data
+  command: "/home/vagrant/{{ venv_name }}/exec python {{url_django_project}}/manage.py loaddata {{ url_django_app }}/fixtures/initial_data.json"
