--- a/provisioning/roles/django/tasks/main.yml
+++ b/provisioning/roles/django/tasks/main.yml
@@ -1,25 +1,9 @@
 ---
 - name: install virtualenv
-  #sudo: yes
+  sudo: yes
   pip: executable=pip3 name=virtualenv
 - name: create virtual env and init
   #sudo: yes
   command: virtualenv "{{ venv_name }}"
-- name: install django
-  #sudo: yes
-  pip: executable=pip3 virtualenv="/home/vagrant/{{ venv_name }}" name=django
-- name: install django rest framework
-  #sudo: yes
-  pip: executable=pip3 virtualenv="/home/vagrant/{{ venv_name }}" name=djangorestframework
-- name: install markdown
-  #sudo: yes
-  pip: executable=pip3 virtualenv="/home/vagrant/{{ venv_name }}" name=markdown
-- name: install django-filter
-  #sudo: yes
-  pip: executable=pip3 virtualenv="/home/vagrant/{{ venv_name }}" name=django-filter
-- name: install dependecies for psycopg2
-  sudo: yes
-  shell: "apt-get -y build-dep python-psycopg2"
-- name: install psycopg2
-  #sudo: yes
-  pip: executable=pip3 virtualenv="/home/vagrant/{{ venv_name }}" name=psycopg2
+- name: install dependencies
+  pip: executable=pip3 virtualenv="/home/vagrant/{{ venv_name }}" requirements="{{ url_django_project }}/reqs/all.txt"
