--- a/provisioning/roles/nginx/tasks/main.yml
+++ b/provisioning/roles/nginx/tasks/main.yml
@@ -7,9 +7,9 @@
   service: name=nginx state=started
 - name: copy template for nginx configuration
   sudo: yes
-  template: src="nginx.conf.j2" dest="/etc/nginx/sites-available/drf-settings"
+  template: src="nginx.conf.j2" dest="/etc/nginx/sites-available/{{ name_project }}"
   notify: restart nginx
 - name: symlink to sites-enabled
   sudo: yes
-  command: ln -sf /etc/nginx/sites-available/drf-settings /etc/nginx/sites-enabled
+  command: ln -sf /etc/nginx/sites-available/{{ name_project }} /etc/nginx/sites-enabled
   notify: restart nginx
