--- a/provisioning/vars.yml
+++ b/provisioning/vars.yml
@@ -2,14 +2,12 @@
 
 #Django
 project_git_url: "{{ project_git_url_arg | default('git@github.com:nessa/serenity.git') }}"
-name_project: "{{ name_project_arg | default('amuseapi') }}"
+name_project: "{{ name_project_arg | default('serenity') }}"
 name_app: "{{ name_app_arg | default('amuseapi') }}"
-intern_repo_path: "{{ intern_repo_path_arg | default('serenity/') }}"
-url_django_project: "/home/vagrant/{{ intern_repo_path }}{{ name_project }}"
-url_django_app: "/home/vagrant/{{ intern_repo_path }}{{ name_project }}/{{ name_app }}"
+url_django_project: "/home/vagrant/{{ name_project }}/{{ name_app }}"
 
 #Nginx
-domain: "{{ domain_arg | default('192.168.1.6') }}"
+domain: "{{ domain_arg | default('10.0.240.24') }}"
 port: "{{ port_arg | default('8002') }}"
 static_folder: "{{ url_django_project }}/static"
 
