--- a/provisioning/roles/nginx/tasks/main.yml
+++ b/provisioning/roles/nginx/tasks/main.yml
@@ -1,15 +1,22 @@
 ---
 - name: ensure nginx is the latest version
-  sudo: yes
+  become: yes
   apt: pkg=nginx state=latest
   notify: restart nginx
 - name: ensure nginx is running
   service: name=nginx state=started
 - name: copy template for nginx configuration
-  sudo: yes
+  become: yes
   template: src="nginx.conf.j2" dest="/etc/nginx/sites-available/{{ name_project }}"
   notify: restart nginx
+- name: check the current symlink
+  stat: path=/etc/nginx/sites-enabled
+  register: sites_enabled
+- name: remove the folder if exists
+  become: yes
+  when: sites_enabled.stat.isdir is defined and sites_enabled.stat.isdir
+  file: path=/etc/nginx/sites-enabled state=absent
 - name: symlink to sites-enabled
-  sudo: yes
-  command: ln -sf /etc/nginx/sites-available/{{ name_project }} /etc/nginx/sites-enabled
+  become: yes
+  file: src=/etc/nginx/sites-available/{{ name_project }} dest=/etc/nginx/sites-enabled state=link force=yes
   notify: restart nginx
