--- a/provisioning/roles/supervisor/tasks/main.yml
+++ b/provisioning/roles/supervisor/tasks/main.yml
@@ -1,11 +1,13 @@
 ---
 - name: copy template for supervisor run gunicorn
-  sudo: yes
+  become: yes
   template: src="supervisor.conf.j2" dest="/etc/supervisor/conf.d/{{ name_project }}.conf"
 - name: reread files of supervisor
-  sudo: yes
+  become: yes
   supervisorctl: name={{ name_project }} state=present
 - name: start project of supervisor
-  sudo: yes
+  become: yes
   supervisorctl: name={{ name_project }} state=started
-  notify: restart supervisor
+  notify:
+  - reread supervisor
+  - restart supervisor
