Updated to use external django config.

--- a/provisioning/roles/django/tasks/main.yml
+++ b/provisioning/roles/django/tasks/main.yml
@@ -1,14 +1,20 @@
 ---
-- name: ensure project log dir exists
+- name: Ensure project log dir exists
   become: yes
   file: path=/var/log/django state=directory owner="vagrant" group="vagrant" mode="755"
-- name: ensure project log file exists
+- name: Ensure project log file exists
   become: yes
   file: path=/var/log/django/{{ name_project }}.log owner="vagrant" group="vagrant" state=touch mode="755"
-- name: install virtualenv
+- name: Copy template for external settings
+  become: yes
+  template: src="settings.ini" dest="/etc/{{ name_project}}-settings.ini"
+- name: Change permissions
+  become: yes
+  file: path="/etc/{{ name_project }}-settings.ini" owner="vagrant" group="vagrant" mode="755"
+- name: Install virtualenv
   become: yes
   pip: executable=pip3 name=virtualenv
-- name: create virtual env and init
+- name: Create virtual env and init
   command: virtualenv "{{ venv_name }}"
-- name: install dependencies
+- name: Install dependencies
   pip: executable=pip3 virtualenv="/home/vagrant/{{ venv_name }}" requirements="{{ url_django_project }}/reqs/all.txt"
